# composite-video-simulator

./: .gitignore  BUILD-GUIDE.md  CMakeLists.txt  DEVELOPMENT.md  Makefile.am  color_convert.h  common.h  ffmpeg_ntsc.cpp  ffmpeg_vhsled.cpp  filmac.cpp  filmac_cuda.cu  filmac_cuda.h  frameblend.cpp  frameblend_cuda.cu  frameblend_cuda.h  input_file.h  lowpass_filter.h  ntsc_cuda.cu  ntsc_cuda.h  output_context.h  spout_ntsc.cpp  toolchain-mingw64.cmake  vhsled_cuda.cu  vhsled_cuda.h
